Generate a chunk manifest so that changes to app do not affect the hash for vendor

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,11 @@
 </head>
 <body>
     <app></app>
-    {% if (o.htmlWebpackPlugin.options.devServer) { %}
-    <script src="{%=o.htmlWebpackPlugin.options.devServer%}"></script>
-    {% } %}
+
+{% if (o.htmlWebpackPlugin.options.devServer) { %}
+<script src="{%=o.htmlWebpackPlugin.options.devServer%}"></script>
+{% } else { %}
+<script>window.webpackManifest = WEBPACK_MANIFEST_TEMPLATE;</script>
+{% } %}
 </body>
 </html>
